Fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
   justify-content: space-between;
   align-items: center;
   color: #fff;
-  gap: 2rem;
+  gap: 1.6rem;
 }
 @media only screen and (max-width: 36em) {
   .navbar {
