--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -26,7 +26,7 @@ body {
   justify-content: space-between;
   align-items: center;
   color: $white;
-  gap: 2rem;
+  gap: 1.6rem;
 
   @include respond(mobile) {
     padding-inline: 3rem;
